--- a/src/modules/simulation/simulator_ignition_bridge/gazebo_env.sh.in
+++ b/src/modules/simulation/simulator_ignition_bridge/gazebo_env.sh.in
@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
 
-export PX4_IGN_GAZEBO_MODELS=@PX4_SOURCE_DIR@/Tools/simulation/ignition/models
-export PX4_IGN_GAZEBO_WORLDS=@PX4_SOURCE_DIR@/Tools/simulation/ignition/worlds
+export PX4_GZ_MODELS=@PX4_SOURCE_DIR@/Tools/simulation/ignition/models
+export PX4_GZ_WORLDS=@PX4_SOURCE_DIR@/Tools/simulation/ignition/worlds
 
-export IGN_GAZEBO_RESOURCE_PATH=$IGN_GAZEBO_RESOURCE_PATH:$PX4_IGN_GAZEBO_MODELS
+export IGN_GAZEBO_RESOURCE_PATH=$IGN_GAZEBO_RESOURCE_PATH:$PX4_GZ_MODELS
