--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -16,6 +16,7 @@ jobs:
     - name: Build if changed
       run: |
         if ! git diff --exit-code origin/main Tools/setup/ubuntu.sh Tools/docker/Dockerfile-jammy; then
-          (cd Tools/docker && docker build . -t px4-dev -f Dockerfile-jammy)
-          PX4_DOCKER_REPO=px4-dev Tools/docker_run.sh make px4_fmu-v2
+          (cd Tools/docker && docker build . -t px4-dev -f Dockerfile-jammy --build-arg git_ref=${{ github.sha }})
+          export SRC_DIR="/PX4-Autopilot"
+          docker run --rm px4-dev -w "${SRC_DIR}" --volume=$(pwd):${SRC_DIR}:rw  make px4_fmu-v2
         fi
