fixup: make entrypoint executable

--- a/Tools/docker/Dockerfile-jammy
+++ b/Tools/docker/Dockerfile-jammy
@@ -38,6 +38,7 @@ EXPOSE 14557/udp
 
 # create and start as LOCAL_USER_ID
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
+RUN chmod 755 /usr/local/bin/entrypoint.sh
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
 CMD ["/bin/bash"]
