--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -15,6 +15,11 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build if changed
       run: |
+        COMMITS=${{ github.event.pull_request.commits }}
+        if [[ -n "$COMMITS" ]]; then
+          # Prepare enough depth for diffs with main
+          git fetch --depth="$(( commits + 1 ))"
+        fi
         if ! git diff --exit-code origin/main -- Tools/setup/ubuntu.sh Tools/docker/Dockerfile-jammy; then
           (cd Tools/docker && docker build . -t px4-dev -f Dockerfile-jammy --build-arg git_ref=${{ github.sha }})
           export SRC_DIR="/PX4-Autopilot"
