--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -23,5 +23,6 @@ jobs:
         if ! git diff --exit-code origin/main -- Tools/setup/ubuntu.sh Tools/docker/Dockerfile-jammy; then
           (cd Tools/docker && docker build . -t px4-dev -f Dockerfile-jammy --build-arg git_ref=${{ github.sha }})
           export SRC_DIR="/PX4-Autopilot"
+          git config --global --add safe.directory ${SRC_DIR}
           sudo docker run --rm -w "${SRC_DIR}" --volume=$(pwd):${SRC_DIR}:rw px4-dev make px4_fmu-v2
         fi
