fixup: copy instead of wget

--- a/Tools/docker/Dockerfile-jammy
+++ b/Tools/docker/Dockerfile-jammy
@@ -9,13 +9,8 @@ ENV DEBIAN_FRONTEND noninteractive
 ENV LANG C.UTF-8
 ENV LC_ALL C.UTF-8
 
-RUN apt-get update && apt-get -y --quiet --no-install-recommends install \
-    ca-certificates \
-    wget
-
-ARG git_ref=main
-RUN wget https://raw.githubusercontent.com/PX4/PX4-Autopilot/$git_ref/Tools/setup/ubuntu.sh
-RUN wget https://raw.githubusercontent.com/PX4/PX4-Autopilot/$git_ref/Tools/setup/requirements.txt
+COPY ../setup/ubuntu.sh .
+COPY ../setup/requirements.txt .
 RUN bash ubuntu.sh
 
 # create user with id 1001 (jenkins docker workflow default)
