fixup: another safe dir try

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -24,6 +24,5 @@ jobs:
           (cd Tools/setup && docker build . -t px4-dev -f Dockerfile-jammy)
           export SRC_DIR="/PX4-Autopilot"
           git config --global --add safe.directory $(pwd)
-          docker run --rm -w "${SRC_DIR}" --volume=$(pwd):${SRC_DIR}:rw px4-dev git config --global --add safe.directory ${SRC_DIR}
-          docker run --rm -w "${SRC_DIR}" --volume=$(pwd):${SRC_DIR}:rw px4-dev make px4_fmu-v2
+          docker run --rm -w "${SRC_DIR}" --volume=$(pwd):${SRC_DIR}:rw px4-dev bash -c 'pwd; git config --global --add safe.directory ${SRC_DIR}; make px4_fmu-v2'
         fi
