fixup: try to upload to github registry

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -12,7 +12,7 @@ jobs:
   docker-jammy:
     runs-on: ubuntu-22.04
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
       with:
         token: ${{ secrets.ACCESS_TOKEN }}
     - name: Build if changed
@@ -23,10 +23,14 @@ jobs:
           git fetch --depth="$(( commits + 1 ))"
         fi
         if ! git diff --exit-code origin/main -- Tools/setup/ubuntu.sh Tools/setup/Dockerfile-jammy; then
-          (cd Tools/setup && docker build . -t px4-dev -f Dockerfile-jammy)
-          export SRC_DIR="/PX4-Autopilot"
-          git config --global --add safe.directory $(pwd)
-          git fetch --tags
-          git submodule update --init --recursive
-          docker run --privileged --rm -w "${SRC_DIR}" --volume=$(pwd):${SRC_DIR}:rw px4-dev bash -c "pwd; git config --global --add safe.directory ${SRC_DIR}; make px4_fmu-v2"
+          DOCKER_TAG=ghcr.io/PX4-Autopilot/px4-dev:PR-${{ github.event.pull_request.number }}
+          (cd Tools/setup && docker build . -t $DOCKER_TAG -f Dockerfile-jammy)
+          docker push $DOCKER_TAG
+          #export SRC_DIR="/PX4-Autopilot"
+          #git config --global --add safe.directory $(pwd)
+          #git fetch --tags
+          #git submodule update --init --recursive
+          #docker run --privileged --rm -w "${SRC_DIR}" --volume=$(pwd):${SRC_DIR}:rw px4-dev bash -c "pwd; git config --global --add safe.directory ${SRC_DIR}; make px4_fmu-v2"
         fi
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
