--- a/src/modules/mc_pos_control/PositionControl/CMakeLists.txt
+++ b/src/modules/mc_pos_control/PositionControl/CMakeLists.txt
@@ -38,6 +38,7 @@ px4_add_library(PositionControl
 	PositionControl.hpp
 )
 target_include_directories(PositionControl PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(PositionControl PRIVATE SlewRate)
 
 px4_add_unit_gtest(SRC ControlMathTest.cpp LINKLIBS PositionControl)
 px4_add_unit_gtest(SRC PositionControlTest.cpp LINKLIBS PositionControl)
