--- a/.vscode/cmake-variants.yaml
+++ b/.vscode/cmake-variants.yaml
@@ -6,6 +6,11 @@ CONFIG:
       buildType: RelWithDebInfo
       settings:
         CONFIG: px4_sitl_default
+    px4_sitl_gps_base:
+      short: px4_sitl_gps_base
+      buildType: RelWithDebInfo
+      settings:
+        CONFIG: px4_sitl_gps_base
     px4_sitl_rtps:
       short: px4_sitl_rtps
       buildType: RelWithDebInfo
