github action: enable artifactory push always

--- a/.github/workflows/tiiuae-pixhawk.yaml
+++ b/.github/workflows/tiiuae-pixhawk.yaml
@@ -142,7 +142,7 @@ jobs:
     name: upload builds to Artifactory
     runs-on: ubuntu-latest
     needs: [pixhawk4, saluki-v1, saluki-v2, px4fwupdater]
-    if: github.event_name == 'push'
+    if: true
     steps:
       - name: Download pixhawk artifacts
         uses: actions/download-artifact@v2
