uORB::Publication2: Add comment & include in CMakeLists.txt
- This allows other modules to use Publication2

--- a/platforms/common/uORB/CMakeLists.txt
+++ b/platforms/common/uORB/CMakeLists.txt
@@ -39,6 +39,7 @@ set(SRCS)
 set(SRCS_COMMON
 	ORBSet.hpp
 	Publication.hpp
+	Publication2.hpp
 	PublicationMulti.hpp
 	Subscription.cpp
 	Subscription.hpp
