--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -195,6 +195,7 @@ set(msg_files
 	vehicle_land_detected.msg
 	vehicle_local_position.msg
 	vehicle_local_position_setpoint.msg
+	vehicle_local_path_setpoint.msg
 	vehicle_magnetometer.msg
 	vehicle_odometry.msg
 	vehicle_optical_flow.msg
