--- a/platforms/qurt/src/px4/CMakeLists.txt
+++ b/platforms/qurt/src/px4/CMakeLists.txt
@@ -32,3 +32,12 @@
 ############################################################################
 
 # Placeholder
+set(QURT_LAYER_SRCS
+	tasks.cpp
+	)
+
+add_library(px4_layer
+        ${QURT_LAYER_SRCS}
+)
+
+target_link_libraries(px4_layer PRIVATE work_queue)
