Made a separate precision landing library. Now, the Precision Landing mode can use it the same as the RTL and the mission mode.

--- a/src/modules/navigator/CMakeLists.txt
+++ b/src/modules/navigator/CMakeLists.txt
@@ -46,6 +46,7 @@ px4_add_module(
 		takeoff.cpp
 		land.cpp
 		precland.cpp
+		precland_mode.cpp
 		mission_feasibility_checker.cpp
 		geofence.cpp
 		vtol_takeoff.cpp
