ensuring proper run with new kconfig for uorb coms

--- a/platforms/common/uORB/Kconfig
+++ b/platforms/common/uORB/Kconfig
@@ -2,4 +2,4 @@ menuconfig ORB_COMMUNICATOR
 	bool "orb communicator"
 	default n
 	---help---
-		Enable support for the uorb communicator
+		Enable support for the uorb communicator for distributed platforms
