[RTL]: Define separate RTL module performing all the different RTL in their respective classes. - RTL Direct, for directly flying to the destination and landing there - RTL Mission Fast for Landing at the mission landing spot by going along the mission path. - RTL Mission Fast Reverse for landing at home but going along the mision path.
Signed-off-by: RomanBapst <bapstroman@gmail.com>

--- a/src/modules/navigator/CMakeLists.txt
+++ b/src/modules/navigator/CMakeLists.txt
@@ -43,6 +43,9 @@ px4_add_module(
 		mission.cpp
 		loiter.cpp
 		rtl.cpp
+		rtl_direct.cpp
+		rtl_mission_fast.cpp
+		rtl_mission_fast_reverse.cpp
 		takeoff.cpp
 		land.cpp
 		precland.cpp
