move landing gear logic into auxiliary actuators controller
Signed-off-by: Silvan Fuhrer <silvan@auterion.com>

--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -108,7 +108,8 @@ set(msg_files
 	InternalCombustionEngineStatus.msg
 	IridiumsbdStatus.msg
 	IrlockReport.msg
-	LandingGear.msg
+	LandingGearSetpoint.msg
+	LandingGearAutoSetpoint.msg
 	LandingGearWheel.msg
 	LandingTargetInnovations.msg
 	LandingTargetPose.msg
