move flaps/spoilers controller into auxiliary controller and enable flaperons/spoilerons
Signed-off-by: Silvan Fuhrer <silvan@auterion.com>

--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -88,6 +88,8 @@ set(msg_files
 	FollowTarget.msg
 	FollowTargetEstimator.msg
 	FollowTargetStatus.msg
+	FlapsAutoSetpoint.msg
+	FlapsSetpoint.msg
 	GeneratorStatus.msg
 	GeofenceResult.msg
 	GimbalDeviceAttitudeStatus.msg
@@ -170,6 +172,8 @@ set(msg_files
 	SensorSelection.msg
 	SensorsStatus.msg
 	SensorsStatusImu.msg
+	SpoilersAutoSetpoint.msg
+	SpoilersSetpoint.msg
 	SystemPower.msg
 	TakeoffStatus.msg
 	TaskStackInfo.msg
