--- a/.gitmodules
+++ b/.gitmodules
@@ -60,5 +60,10 @@
 	branch = px4
 [submodule "src/modules/microdds_client/Micro-XRCE-DDS-Client"]
 	path = src/modules/microdds_client/Micro-XRCE-DDS-Client
-	url = https://github.com/PX4/Micro-XRCE-DDS-Client.git
-	branch = px4
+	url = https://github.com/tiiuae/Micro-XRCE-DDS-Client.git
+[submodule "boards/ssrc/saluki-v1"]
+	path = boards/ssrc/saluki-v1
+	url = ../saluki-v1.git
+[submodule "boards/ssrc/saluki-v2"]
+	path = boards/ssrc/saluki-v2
+	url = ../saluki-v2.git
