--- a/src/lib/parameters/CMakeLists.txt
+++ b/src/lib/parameters/CMakeLists.txt
@@ -1,6 +1,6 @@
 ############################################################################
 #
-#   Copyright (c) 2017 - 2020 PX4 Development Team. All rights reserved.
+#   Copyright (c) 2017 - 2022 PX4 Development Team. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -159,18 +159,6 @@ else()
 	list(APPEND SRCS param_translation.cpp)
 endif()
 
-if(${PX4_PLATFORM} STREQUAL "nuttx")
-	# add_subdirectory(flashparams)
-
-	# # build user-side interface for protected build
-	# if(NOT CONFIG_BUILD_FLAT)
-	# 	list(APPEND SRCS parameters_ioctl.cpp)
-	# 	add_library(usr_parameters usr_parameters_if.cpp px4_parameters.hpp)
-	# 	add_dependencies(usr_parameters prebuild_targets)
-	# 	target_compile_definitions(usr_parameters PRIVATE -DMODULE_NAME="usr_parameters")
-	# endif()
-endif()
-
 # TODO: find a better way to do this
 if(NOT "${PX4_BOARD}" MATCHES "px4_io")
 	add_library(parameters STATIC EXCLUDE_FROM_ALL
@@ -182,10 +170,11 @@ if(NOT "${PX4_BOARD}" MATCHES "px4_io")
 
 	target_link_libraries(parameters PRIVATE perf tinybson px4_platform)
 
-	target_compile_definitions(parameters PRIVATE -DMODULE_NAME="parameters" -D__KERNEL__)
+	target_compile_definitions(parameters PRIVATE -DMODULE_NAME="parameters")
 	target_compile_options(parameters
 		PRIVATE
 			#-DDEBUG_BUILD
+			#${MAX_CUSTOM_OPT_LEVEL}
 			-Wno-cast-align		# TODO: fix and enable
 			-Wno-sign-compare	# TODO: fix and enable
 	)
